@@ -15758,6 +15758,17 @@ Very High</property>
 			      <property name="focus_on_click">True</property>
 			    </widget>
 			  </child>
+
+			  <child>
+			    <widget class="GtkButton" id="rcs">
+			      <property name="can_default">True</property>
+			      <property name="can_focus">True</property>
+			      <property name="label" translatable="yes">Check In</property>
+			      <property name="use_underline">True</property>
+			      <property name="relief">GTK_RELIEF_NORMAL</property>
+			      <property name="focus_on_click">True</property>
+			    </widget>
+			  </child>
 			</widget>
 		      </child>
 		    </widget>
